name:          input-devices
version:       0.1.0.0
cabal-version: 2.0
build-type:    Simple
license:       MIT
license-file:  LICENSE.txt
copyright:     (c) 2019 yumiova
author:        yumiova
maintainer:    yumiova@protonmail.ch
stability:     alpha
homepage:      https://github.com/yumiova/input-devices
bug-reports:   https://github.com/yumiova/input-devices/issues
synopsis:      Programmable user-space Linux input device drivers

source-repository head
  type:     git
  location: https://github.com/yumiova/input-devices

library libevdev
  default-language:  Haskell2010
  exposed-modules:   System.Libevdev
  build-depends:
      base        ^>=4.12.0.0
    , containers  ^>=0.6.0.1
    , inline-c    ^>=0.7.0.1

  other-modules:
    System.Libevdev.Input
    System.Libevdev.Time

  hs-source-dirs:    libevdev
  other-extensions:
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints

  pkgconfig-depends: libevdev (==1.6.0 || >1.6.0) && <1.7

library
  default-language:  Haskell2010
  exposed-modules:
    Input.Control
    Input.Device

  build-depends:
      base       ^>=4.12.0.0
    , directory  ^>=1.3.3.0
    , inline-c   ^>=0.7.0.1
    , libevdev

  hs-source-dirs:    library
  other-extensions:
    QuasiQuotes
    TemplateHaskell

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints

  pkgconfig-depends: libevdev (==1.6.0 || >1.6.0) && <1.7
